# CuraEngine_example_plugin_cpp

./: .gitignore  CMakeLists.txt  conanfile.py
.github/workflows/: conan-package.yml
cura-plugin/: CuraEngineSimplifyPlugin.py  __init__.py  plugin.json
include/plugin/: cmdline.h  plugin.h
include/simplify/: concepts.h  point_container.h  simplify.h  types.h
src/: main.cpp
